# llama2.c

./: api.c  main.c  meson.build  meson_options.txt  sampler.c  tokenizer.c  transformer.c  transformer_quantized.c  util.c  util.h
include/: api.h  meson.build  sampler.h  tokenizer.h  transformer.h  transformer_quantized.h
jni/: Android.mk  Application.mk
test/: meson.build  test.c
